iptables-backup-20260627-133946.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun 27 13:39:46 2026
*raw
:PREROUTING ACCEPT [23639675:20977294417]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.29.172.2/32 ! -i amn0 -j DROP
-A PREROUTING -d 172.17.0.2/32 ! -i docker0 -j DROP
COMMIT
# Completed on Sat Jun 27 13:39:46 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun 27 13:39:46 2026
*filter
:INPUT ACCEPT [9980919:11968175608]
:FORWARD ACCEPT [2441:144904]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -o wg0 -j ACCEPT
-A FORWARD -i wg0 -o tun0 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o tun0 -j ACCEPT
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A DOCKER -d 172.29.172.2/32 ! -i amn0 -o amn0 -p tcp -m tcp --dport 3390 -j ACCEPT
-A DOCKER ! -i amn0 -o amn0 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o amn0 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o amn0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i amn0 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
COMMIT
# Completed on Sat Jun 27 13:39:46 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun 27 13:39:46 2026
*nat
:PREROUTING ACCEPT [202371:12311766]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [429908:26171255]
:POSTROUTING ACCEPT [430373:26197867]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 10.0.0.0/8 -o wg0 -j MASQUERADE
-A POSTROUTING -s 172.16.0.0/12 -o wg0 -j MASQUERADE
-A POSTROUTING -s 192.168.0.0/16 -o wg0 -j MASQUERADE
-A DOCKER ! -i amn0 -p tcp -m tcp --dport 3390 -j DNAT --to-destination 172.29.172.2:3390
COMMIT
# Completed on Sat Jun 27 13:39:46 2026
